argocd-apps/ingress-service/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
  namespace: image-gen
spec:
  selector:
    app: ingress-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
